--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,31 +1,104 @@
-.navbar{
 
-	border-radius: 0px;
-	margin-bottom: 0px;
-	border-bottom: solid 2px #DFDFDF;
-}
 
-.form-control{
+/********** navbar-styles **********/
 
+	.navbar{
+		border-radius: 0px;
+		margin-bottom: 0px;
+		border-bottom: solid 2px #dfdfdf;
+		background-color: #668933;
+	}
+
+	.navbar-default .navbar-nav>li>a{
+	    color: #fff;
+	}
+
+	.navbar-default .navbar-nav>li>a:hover{
+		background: rgba(255, 255, 255,0.1);
+	    color: #fff;
+	}
+
+	.navbar-brand{
+	   padding: 0px;
+	}
+
+  	.navbar-brand>img{
+    height: 100%;
+    width: auto;
+    margin-left: 10px;
+    padding: 5px 14px;
+  	}
+
+/********** navbar-styles **********/
+
+
+
+/******** carousel-slides ********/
+
+	.carousel{
+	z-index: 1;
+	position: absolute;
+	clear: both;
+	}
+
+   .caption{
+   	background-color: rgba(0,0,0,0.1);
+    margin-left: 45px;
+    margin-top: 70px;
+    border-radius: 10px;
+    color: #fff;
+    height: auto;
+    padding-top: 25px;
+    padding-bottom: 45px;
+    z-index: 3;
+    position: relative;
+	}
+
+    .text{
+    padding: 10px;
+    font-size: 24px;
+	}
+
+	.register{
+	font-size: 18px;
+	}
+
+	.log{
+	position: relative; 
+	z-index: 2;
+	float: right;
+	margin-top: 15px;
+	margin-right: 15px;
+	padding: 5px;
+	}
+
+
+/******** carousel-slides ********/
+
+	.form-control{
 	background-color: #f3f3f6;
-}
+	}
 
-.quitarfloat{
-
+	.quitarfloat{
 	float: none;
-}
+	}
 
-.btn-success{
+	.text {
+	font-family: 'Roboto', sans-serif;
+	color: #fff;
+	}
 
-	box-shadow: 0 3px 0 0 #398439;
-}
+	.pacifico{
+	font-family: 'Lobster Two', cursive;
+  	}
 
-.btn-danger{
 
-	box-shadow: 0 3px 0 0 #d43f3a;
-}
 
-.btn-primary{
 
-	box-shadow: 0 3px 0 0 #1b5dab;
-}
+
+
+
+
+
+
+
