--- a/public/css/main.css
+++ b/public/css/main.css
@@ -157,7 +157,7 @@
 	}
 
 	footer{
-		border-top: solid 5px #dfdfdf;
+		border-top: solid 1px #dfdfdf;
 		background-color: #668933;
 		height: auto;
 	}
@@ -279,6 +279,19 @@
 
 		text-align: left;
 	}
+
+	.panel-primary>.panel-heading {
+    color: #fff;
+    background-color: #668933;
+    border-color: #dddddd;
+    border-radius: 5px 5px 0px 0px;
+    border-bottom: solid 3px #dfdfdf; 
+	}
+
+	
+
+
+	
 
 	
 
