Actualización de Desarrollo 21/11/2017

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,6 @@
 
 	.panel-default:hover{
 		box-shadow: rgb(150,150,150) 3px 3px 10px;
-		
 	}
 
 	.panel-heading:hover{
@@ -65,8 +64,17 @@
   		background-color: #fff;
   	}
 
-  	.navbar-default .navbar-toggle {
+  	.navbar-default .navbar-toggle{
     	border-color: #ddd;
+	}
+
+	.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
+	    background-color: rgb(226,240,217);
+	    color: 000;
+	}
+
+	.dropdown-menu {
+		background-color: rgb(226,240,217);
 	}
   	
 
@@ -146,7 +154,6 @@
 	}
 
 	.exp{
-
 		color: #fff;
 		max-width: 50%;
 		height: 40px;
@@ -164,39 +171,39 @@
 	/******** home ********/
 
 	/* footer social icons */
-	ul.social-network {
+	ul.social-network{
 		list-style: none;
 		display: inline;
 		margin-left:0 !important;
 		padding: 0;
 	}
-	ul.social-network li {
+	ul.social-network li{
 		display: inline;
 		margin: 0 5px;
 	}
 
 	/* footer social icons */
-	.social-network a.icoFacebook:hover {
+	.social-network a.icoFacebook:hover{
 		background-color:#3B5998;
 	}
-	.social-network a.icoInstagram:hover {
+	.social-network a.icoInstagram:hover{
 		background-color:#cd486b;
 	}
-	.social-network a.icoTwitter:hover {
+	.social-network a.icoTwitter:hover{
 		background-color:#33ccff;
 	}
-	.social-network a.icoYouTube:hover {
+	.social-network a.icoYouTube:hover{
 		background-color:#e81b1b;
 	}
 	.social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i, .social-network a.icoInstagram:hover i,
 	.social-network a.icoYouTube:hover i {
 		color:#fff;
 	}
-	a.socialIcon:hover, .socialHoverClass {
+	a.socialIcon:hover, .socialHoverClass{
 		color:#44BCDD;
 	}
 
-	.social-circle li a {
+	.social-circle li a{
 		display:inline-block;
 		position:relative;
 		margin:0 auto 0 auto;
@@ -208,13 +215,13 @@
 		height: 50px;
 		font-size:20px;
 	}
-	.social-circle li i {
+	.social-circle li i{
 		margin:0;
 		line-height:50px;
 		text-align: center;
 	}
 
-	.social-circle li a:hover i, .triggeredHover {
+	.social-circle li a:hover i, .triggeredHover{
 		-moz-transform: rotate(360deg);
 		-webkit-transform: rotate(360deg);
 		-ms--transform: rotate(360deg);
@@ -225,7 +232,7 @@
 		-ms-transition: all 0.2s;
 		transition: all 0.2s;
 	}
-	.social-circle i {
+	.social-circle i{
 		color: #fff;
 		-webkit-transition: all 0.8s;
 		-moz-transition: all 0.8s;
@@ -267,173 +274,180 @@
 	}
 	/******** responsive ********/
 
-	.btn-success {
-    box-shadow: rgb(150,150,150) 3px 3px;
+	.btn-success{
+    	box-shadow: rgb(150,150,150) 3px 3px;
 	}
 
-	a:hover, a:focus {
+	a:hover, a:focus{
 		text-decoration: none;
 	}
 
 	.aside{
-
 		text-align: left;
 	}
 
-	.panel-primary>.panel-heading {
-    color: #fff;
-    background-color: #668933;
-    border-color: #dddddd;
-    border-radius: 5px 5px 0px 0px;
-    border-bottom: solid 3px #dfdfdf; 
+	.panel-primary>.panel-heading{
+	    color: #fff;
+	    background-color: #668933;
+	    border-color: #dddddd;
+	    border-radius: 5px 5px 0px 0px;
+	    border-bottom: solid 3px #dfdfdf; 
 	}
 
 	/* quienes somos */
+	.timeline{
+	  list-style: none;
+	  padding: 20px 0 20px;
+	  position: relative;
+	}
 
-	.timeline {
-  list-style: none;
-  padding: 20px 0 20px;
-  position: relative;
-}
-.timeline:before {
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eeeeee;
-  left: 50%;
-  margin-left: -1.5px;
-}
-.timeline > li {
-  margin-bottom: 20px;
-  position: relative;
-}
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
-.timeline > li:after {
-  clear: both;
-}
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
-}
-.timeline > li:after {
-  clear: both;
-}
-.timeline > li > .timeline-panel {
-  width: 50%;
-  float: left;
-  border: 1px solid #d4d4d4;
-  border-radius: 2px;
-  padding: 20px;
-  position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-}
-.timeline > li.timeline-inverted + li:not(.timeline-inverted),
-.timeline > li:not(.timeline-inverted) + li.timeline-inverted {
-margin-top: -60px;
-}
+	.timeline:before{
+	  top: 0;
+	  bottom: 0;
+	  position: absolute;
+	  content: " ";
+	  width: 3px;
+	  background-color: #eeeeee;
+	  left: 50%;
+	  margin-left: -1.5px;
+	}
+	.timeline > li{
+	  margin-bottom: 20px;
+	  position: relative;
+	}
+	.timeline > li:before,
+	.timeline > li:after{
+	  content: " ";
+	  display: table;
+	}
+	.timeline > li:after{
+	  clear: both;
+	}
+	.timeline > li:before,
+	.timeline > li:after{
+	  content: " ";
+	  display: table;
+	}
+	.timeline > li:after{
+	  clear: both;
+	}
+	.timeline > li > .timeline-panel{
+	  width: 50%;
+	  float: left;
+	  border: 1px solid #d4d4d4;
+	  border-radius: 2px;
+	  padding: 20px;
+	  position: relative;
+	  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+	  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+	}
+	.timeline > li.timeline-inverted + li:not(.timeline-inverted),
+	.timeline > li:not(.timeline-inverted) + li.timeline-inverted{
+	  margin-top: -60px;
+	}
 
-.timeline > li:not(.timeline-inverted) {
-padding-right:90px;
-}
+	.timeline > li:not(.timeline-inverted){
+	padding-right:90px;
+	}
 
-.timeline > li.timeline-inverted {
-padding-left:90px;
-}
-.timeline > li > .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -15px;
-  display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #ccc;
-  border-right: 0 solid #ccc;
-  border-bottom: 15px solid transparent;
-  content: " ";
-}
-.timeline > li > .timeline-panel:after {
-  position: absolute;
-  top: 27px;
-  right: -14px;
-  display: inline-block;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0 solid #fff;
-  border-bottom: 14px solid transparent;
-  content: " ";
-}
-.timeline > li > .timeline-badge {
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  font-size: 1.4em;
-  text-align: center;
-  position: absolute;
-  top: 16px;
-  left: 50%;
-  margin-left: -25px;
-  background-color: #999999;
-  z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
-}
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
-}
-.timeline > li.timeline-inverted > .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
-}
-.timeline > li.timeline-inverted > .timeline-panel:after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
-}
-.timeline-badge.primary {
-  background-color: #2e6da4 !important;
-}
-.timeline-badge.quetzal {
-  background-color: #bfcf83 !important;
-}
-.timeline-badge.success {
-  background-color: #3f903f !important;
-}
-.timeline-badge.warning {
-  background-color: #f0ad4e !important;
-}
-.timeline-badge.danger {
-  background-color: #d9534f !important;
-}
-.timeline-badge.info {
-  background-color: #5bc0de !important;
-}
-.timeline-title {
-  margin-top: 0;
-  color: inherit;
-}
-.timeline-body > p,
-.timeline-body > ul {
-  margin-bottom: 0;
-}
-.timeline-body > p + p {
-  margin-top: 5px;
-}
+	.timeline > li.timeline-inverted{
+	padding-left:90px;
+	}
+	.timeline > li > .timeline-panel:before{
+	  position: absolute;
+	  top: 26px;
+	  right: -15px;
+	  display: inline-block;
+	  border-top: 15px solid transparent;
+	  border-left: 15px solid #ccc;
+	  border-right: 0 solid #ccc;
+	  border-bottom: 15px solid transparent;
+	  content: " ";
+	}
+	.timeline > li > .timeline-panel:after{
+	  position: absolute;
+	  top: 27px;
+	  right: -14px;
+	  display: inline-block;
+	  border-top: 14px solid transparent;
+	  border-left: 14px solid #fff;
+	  border-right: 0 solid #fff;
+	  border-bottom: 14px solid transparent;
+	  content: " ";
+	}
+	.timeline > li > .timeline-badge{
+	  color: #fff;
+	  width: 50px;
+	  height: 50px;
+	  line-height: 50px;
+	  font-size: 1.4em;
+	  text-align: center;
+	  position: absolute;
+	  top: 16px;
+	  left: 50%;
+	  margin-left: -25px;
+	  background-color: #999999;
+	  z-index: 100;
+	  border-top-right-radius: 50%;
+	  border-top-left-radius: 50%;
+	  border-bottom-right-radius: 50%;
+	  border-bottom-left-radius: 50%;
+	}
+	.timeline > li.timeline-inverted > .timeline-panel{
+	  float: right;
+	}
+	.timeline > li.timeline-inverted > .timeline-panel:before{
+	  border-left-width: 0;
+	  border-right-width: 15px;
+	  left: -15px;
+	  right: auto;
+	}
+	.timeline > li.timeline-inverted > .timeline-panel:after{
+	  border-left-width: 0;
+	  border-right-width: 14px;
+	  left: -14px;
+	  right: auto;
+	}
+	.timeline-badge.primary{
+	  background-color: #2e6da4 !important;
+	}
+	.timeline-badge.quetzal{
+	  background-color: #bfcf83 !important;
+	}
+	.timeline-badge.success{
+	  background-color: #3f903f !important;
+	}
+	.timeline-badge.warning{
+	  background-color: #f0ad4e !important;
+	}
+	.timeline-badge.danger{
+	  background-color: #d9534f !important;
+	}
+	.timeline-badge.info{
+	  background-color: #5bc0de !important;
+	}
+	.timeline-title{
+	  margin-top: 0;
+	  color: inherit;
+	}
+	.timeline-body > p,
+	.timeline-body > ul{
+	  margin-bottom: 0;
+	}
+	.timeline-body > p + p{
+	  margin-top: 5px;
+	}
+	/* fin de quienes somos*/
 
-/* fin de quienes somos*/
+	.tooltip {
+		
+		filter: alpha(opacity=1);
+  		opacity: 1;
+  		font-size: 12px;
 
+	}
+
+	
 	
 
 
